--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ html, body {
 .selectHeader .selectContainer {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .selectHeader .selectContainer i {
@@ -67,6 +68,13 @@ html, body {
     background: var(--background-color);
 }
 
+.selectHeader .selectContainer button {
+    background: var(--background-light);
+    padding: 5px;
+    border-radius: 1rem;
+    margin-left: 20px;
+}
+
 .wheatherInfo {
     width: 100%;
     height: 80%;
@@ -78,18 +86,31 @@ html, body {
     justify-content: center;
     align-items: center;
     color: var(--text-color);
+    margin-bottom: 20px;
 }
 
 .wheatherInfo .tempInfo i {
-    font-size: 8rem;
+    font-size: 7.5rem;
 }
 
 .wheatherInfo .tempInfo p {
     font-size: 0.9rem;
 }
 
-.wheatherInfo .tempInfo h2 {
+.wheatherInfo .tempInfo .tempResult {
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+}
+
+.wheatherInfo .tempInfo .tempResult h2 {
     font-size: 4rem;
+}
+
+.wheatherInfo .tempInfo .tempResult span {
+    font-size: 2.5rem;
+    font-weight: 500;
+    margin-left: 15px;
 }
 
 .wheatherInfo .othersInfo {
@@ -104,12 +125,34 @@ html, body {
     padding: 10px;
     width: 30%;
     margin: 10px 0;
+    border-radius: 0.5rem;
 }
 
-.wheatherInfo .othersInfo .itemCard p {
-    font-size: 1.2rem;
+.wheatherInfo .othersInfo .itemCard:hover {
+    transform: scale(1.05);
+}
+
+.wheatherInfo .othersInfo .itemCard .itemResult {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.wheatherInfo .othersInfo .itemCard .itemResult p {
+    font-size: 1rem;
     color: var(--text-color);
     text-align: center;
+    font-weight: 700;
+}
+
+.wheatherInfo .othersInfo .itemCard .itemResult span {
+    font-size: 0.8rem;
+    color: var(--text-color);
+    text-align: left;
+    margin-left: 5px;
+    font-weight: 400;
 }
 
 .wheatherInfo .othersInfo .itemCard .itemTitle {
@@ -119,13 +162,93 @@ html, body {
 }
 
 .wheatherInfo .othersInfo .itemCard .itemTitle i {
-    font-size: 2rem;
+    font-size: 1.6rem;
     color: var(--text-color);
 }
 
 .wheatherInfo .othersInfo .itemCard .itemTitle p {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    font-weight: 600;
     color: var(--text-color);
     text-align: center;
-    margin-left: 5px;
+    margin: 0 0 0 5px;
+    vertical-align: middle;
+}
+
+.searchModal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.searchModal .modal-header {
+    padding: 2px 16px;
+    background-color: var(--background-light);
+    color: var(--text-color);
+    font-size: 0.8rem;
+}
+
+.searchModal .modal-header p {
+    font-size: 1.2rem;
+    text-align: end;
+}
+
+.searchModal .modal-header p:hover {
+    cursor: pointer;
+    filter: brightness(0.9);
+}
+
+.searchModal .modal-header h2 {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.searchModal .modal-body {
+    padding: 2px 16px;
+    background-color: var(--background-light);
+    padding: 10px 0 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.searchModal .modal-body input {
+    height: 30px;
+    padding: 2px 16px;
+    background-color: var(--background-light);
+    outline: none;
+    color: var(--text-color);
+}
+
+.searchModal .modal-body button {
+    height: 100%;
+    padding: 6px;
+    margin-left: 10px;
+}
+
+.searchModal .modal-body button:hover {
+    cursor: pointer;
+    filter: brightness(0.9);
+}
+
+.searchModal .modal-content {
+    position: relative;
+    margin: 20px auto 0;
+    padding: 0;
+    border: 1px solid var(--background-color);
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
 }
