--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ html, body {
     background-color: var(--background-color);
 }
 
+#MainContent {
+    width: 100%;
+    height: 100%;
+}
+
 .selectHeader {
     width: 100%;
     height: 20%;
@@ -261,4 +266,26 @@ html, body {
 @keyframes animatetop {
     from {top: -300px; opacity: 0}
     to {top: 0; opacity: 1}
+}
+
+#Loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+#Loading .loader {
+    border: 16px solid var(--text-color); /* Light grey */
+    border-top: 16px solid var(--background-light); /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
